--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,10 @@ dependencies {
     implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 
+    // Bottom sheet lib
+    implementation 'com.maxkeppeler.sheets:core:2.2.6'
+    implementation 'com.maxkeppeler.sheets:options:2.2.6'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
